[package]
name = "netcarrier"
version = "0.1.0"
authors = ["Lucas Poffo <lucas.poffo@magrathealabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["src/proc_macros", "demo"]

[dependencies.proc_macros]
package = "proc_macros"
path = "src/proc_macros"
version = "0.0.0"

[dependencies]
shipyard = "0.4.1"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.3.1"
laminar = "0.3.2"
bytes = "0.5.4"
crossbeam-channel = "0.3"
crossbeam-queue = "0.2.1"
bit-vec = { version = "0.6.2", features = ["serde"] }
rand = "0.7.3"

[[bin]]
name = "main"
path = "src/main.rs"
