[package]
name = "demo"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
netcarrier = { path = "../" }
shipyard = "0.4.1"
serde = { version = "1.0.104", features = ["derive"] }
laminar = "0.3.2"
rand = "0.7.3"
piston_window = "0.107.0"
bincode = "1.3.1"

