[package]
name = "proc_macros"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dev-dependencies]
trybuild = "1.0.30"

[dependencies]
syn = { version = "1.0.33", features = ["extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
